initialized remaining pages, about to fix h1 align

--- a/styles/style.css
+++ b/styles/style.css
@@ -150,11 +150,12 @@ header h1 {
 	text-align: center;
 	color: black;
 	font-size: 40px;
-	padding: 5%;
-	margin: 0 15%;
+	padding: 5% 10%;
+	margin: 0 20%;
+	min-width: 50%;
 	position: absolute;
-	top: 33%;
-	left: 15%;
+	top: 30%;
+	left: 2%;
 	background-color: rgba(255,255,255,0.5);
 	text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 	box-shadow:  0 5px 5px rgba(0,0,0,0.7);
